Closed Bug 149282 Opened 23 years ago Closed 23 years ago

quirks mode layout with table and form tags no longer matches NS 4

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: scottk, Assigned: john)

References

()

Details

(Keywords: regression, testcase, Whiteboard: [FIX])

Attachments

(3 files)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.0+) Gecko/20020604 BuildID: 2002060404 In order to suppress unwanted space around a form element in NS4, it is a common technique to embed the form tag between the <table> and <tr> tags inside a nested table. Quirks mode was matching the NS4 behavior until the 2002060404 build. Mozilla now includes the space the above technique is used to suppress. Reproducible: Always Steps to Reproduce: 1.go to www.weather.com 2.see space between banner image and yellow bar 3.also www.usatoday.com layout is broken, I believe due to the same bug. Actual Results: There is a 10 or so pixel gap between the image and the yellow bar on www.weather.com. This is caused by the form tag in the table. Expected Results: There should not be a space, and was not prior to 20020604 builds. I will attach a test case soon.
This attachment shows the layout problem this bug is about. Note the space between the top image, and the black line image.
test case without the form tags. Note the lack of space between the images.
Yep, this is a result of bug 125578, and probably important unfortunately :( IE mimicks the bad behavior. I will look to see what went wrong.
Assignee: attinasi → jkeiser
Blocks: 125578
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Status: NEW → ASSIGNED
*** Bug 149339 has been marked as a duplicate of this bug. ***
*** Bug 149560 has been marked as a duplicate of this bug. ***
OS: Linux → All
Hardware: PC → All
QA Contact: petersen → moied
Attached patch PatchSplinter Review
The problem is, *before* we removed nsFormFrame the frame was being constructed before we got to ConstructFrameByDisplayType and so that function was never called. Now the frame is created inside that function, and a check is done in there to see if we need to create TR TD frames for content. That check needs to ignore the form tag.
Whiteboard: [FIX]
Comment on attachment 86840 [details] [diff] [review] Patch r=dbaron, although karnaze should probably look at this too
Attachment #86840 - Flags: review+
Comment on attachment 86840 [details] [diff] [review] Patch sr=waterson. karnaze, you okay with it?
Attachment #86840 - Flags: superreview+
Bug still present in 2002060804.
Is the www.fcenter.ru top table problem the same? If not please
Eugene: Yes, www.fcenter.ru is messed up because of this bug.
*** Bug 150283 has been marked as a duplicate of this bug. ***
shouldn't we actually check the namespace ID too?
Yes, but (a) we don't check it anywhere else in the file, so I'd prefer we do it all at once, and (b) there are at least two namespace IDs that need to be checked--None and XHTML, and this makes me wonder if there are possibly more, so I'll leave it to whomever thinks about these things during step (a).
Forms shouldn't ever cause anonymous frames to be constructed inside tables, row groups, etc. and I thought we weren't doing that, so I'm a little surprised. But the patch looks ok to me, if you run the table regression tests.
*** Bug 150381 has been marked as a duplicate of this bug. ***
*** Bug 150821 has been marked as a duplicate of this bug. ***
Keywords: testcase
The last dupe claims that http://money.cnn.com/ is another example. If this is correct, this is the most visible example. pi
Yes, this is correct. Build 2002061204 / win2000
Blocks: 149279
*** Bug 151471 has been marked as a duplicate of this bug. ***
*** Bug 151464 has been marked as a duplicate of this bug. ***
*** Bug 151280 has been marked as a duplicate of this bug. ***
*** Bug 151517 has been marked as a duplicate of this bug. ***
Quick question. Any idea when the attached patch will be checked in on this? This bug is generating lots of dupes, and the patch has r and sr. Does it need drivers approval? Is there any other reason not to check it in?
*** Bug 151655 has been marked as a duplicate of this bug. ***
Regression tests passed with only expected changes. Will check in tonight after I watch the new Clancy movie.
*** Bug 151664 has been marked as a duplicate of this bug. ***
Fix checked in to trunk. That's revision 750 of nsCSSFrameConstructor. Wow.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Confirming - fixed in build 2002061404. Thanks guys!
*** Bug 151835 has been marked as a duplicate of this bug. ***
*** Bug 151269 has been marked as a duplicate of this bug. ***
*** Bug 152078 has been marked as a duplicate of this bug. ***
*** Bug 152117 has been marked as a duplicate of this bug. ***
*** Bug 151979 has been marked as a duplicate of this bug. ***
*** Bug 151106 has been marked as a duplicate of this bug. ***
*** Bug 151707 has been marked as a duplicate of this bug. ***
*** Bug 153652 has been marked as a duplicate of this bug. ***
*** Bug 154605 has been marked as a duplicate of this bug. ***
*** Bug 154812 has been marked as a duplicate of this bug. ***
*** Bug 155773 has been marked as a duplicate of this bug. ***
*** Bug 156272 has been marked as a duplicate of this bug. ***
*** Bug 157462 has been marked as a duplicate of this bug. ***
*** Bug 152892 has been marked as a duplicate of this bug. ***
Maybe not 100% fixed... Missing quirk support for table height attribute. Example URL: http://www.breezeway.tv Completely different rendering of the table in NS4/IE. Unfortuanly, I know of no other way in HTML or even CSS to set a relative vertical alignment, as in the example URL, except by using the "deprecated" (yet no replament is recommended...) table HEIGHT and VALIGN attribs. Anyway, quirk mode support should be there.
V fixed
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: