Make form within table or tr not create a cell frame and screw up layout.  bug 149282, r=dbaron@fas.harvard.edu, sr=waterson@netscape.com